# ledger-afa

./: .gitignore  AUTHORS  ChangeLog  README.md  ledger-afa.py  ledger_afa.py  pyproject.toml  requirements.txt  setup.cfg
tests/: test_functions.py
