[build-system]
requires = ["setuptools>=61.0"]  # Minimum setuptools version for modern packaging
build-backend = "setuptools.build_meta"

[project]
name = "ledger_afa"                # Package name (must be unique on PyPI if publishing)
version = "0.1.0"                # Semantic version (e.g., 0.1.0, 1.0.0)
authors = [
	{name = "Manuel Senfft", email = "info@tagirijus.de"}
]
description = "Abschreibung für Abnutzung Script"
readme = "README.md"             # Path to README (optional)
requires-python = ">=3.13"        # Minimum Python version

[project.urls]
Homepage = "https://github.com/Tagirijus/ledger-afa"  # Optional

[project.entry-points."console_scripts"]
COMMAND = "ledger_afa:main"  # Critical: Maps "greet" command to main() in cli.py

[tool.black]
line-length = 88
target-version = ['py313']
skip-string-normalization = true

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--disable-warnings"
